--- a/app/components/Partners.module.css
+++ b/app/components/Partners.module.css
@@ -7,9 +7,10 @@
 }
 
 .partnersLabel {
+    font-family: var(--font-aclonica);
     color: #FFD700;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 1.1rem;
     font-weight: 700;
     letter-spacing: 1.5px;
     text-align: center;
@@ -18,8 +19,8 @@
 
 .partnersTitle {
     color: #fff;
-    font-size: 2.2rem;
-    font-weight: 800;
+    font-size: 1.25rem;
+    font-weight: 600;
     text-align: center;
     margin-bottom: 24px;
     letter-spacing: -1px;
