--- a/app/50-discount-deal/components/HumanityFirst.module.css
+++ b/app/50-discount-deal/components/HumanityFirst.module.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: start;
+    overflow-x: hidden;
 }
 
 .humanityFirst h2 {
