--- a/app/delivery-coverage/components/Policies.module.css
+++ b/app/delivery-coverage/components/Policies.module.css
@@ -18,23 +18,9 @@
     color: #FFD54A;
 }
 
-.policies h3 {
-    color: #fff;
-    font-size: 1.5rem;
- }
-
-.policies h4 {
-    color: #fff;
-    font-size: 1.2rem;
- }
-
-.policies h5 {
-    color: #fff;
-    font-size: 1.2rem;
- }
-
 .donate {
-    align-self: center;
+    margin: 50px;
+
 }
 
 .policies p {
