--- a/app/terms/components/Policies.module.css
+++ b/app/terms/components/Policies.module.css
@@ -23,18 +23,10 @@
     font-size: 1.5rem;
  }
 
-.policies h4 {
-    color: #fff;
-    font-size: 1.2rem;
- }
-
-.policies h5 {
-    color: #fff;
-    font-size: 1.2rem;
- }
 
 .donate {
-    align-self: center;
+    margin: 50px;
+
 }
 
 .policies p {
