--- a/app/components/BestSeller.module.css
+++ b/app/components/BestSeller.module.css
@@ -20,6 +20,9 @@
     color: white;
     margin-bottom: 40px;
     padding-left: 120px;
+    display: flex;
+    align-items: baseline;
+    gap: 10px;
 }
 
 .best {
