--- a/app/components/Hotdeals.module.css
+++ b/app/components/Hotdeals.module.css
@@ -11,8 +11,14 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 40px;
+    
 }
 
+.sectionTitle{
+    display: flex;
+    align-items: baseline;
+    gap: 10px;
+}
 .hotdealsContent h1 {
     font-size: 32px;
     font-weight: 600;
