--- a/app/components/New.module.css
+++ b/app/components/New.module.css
@@ -14,6 +14,12 @@
     margin-bottom: 40px;
 }
 
+.sectionTitle{
+    display: flex;
+    align-items: baseline;
+    gap: 10px;
+}
+
 .hotdealsContent h1 {
     font-size: 32px;
     font-weight: 600;
