--- a/app/components/reviews.module.css
+++ b/app/components/reviews.module.css
@@ -33,6 +33,12 @@
     justify-content: space-between;
 }
 
+.sectionTitle {
+    display: flex;
+    align-items: baseline;
+    gap: 10px;
+}
+
 .hotdealsContent h1 {
     font-size: 32px;
     font-weight: 600;
